--- a/DataEncryption/DataEncryption.csproj
+++ b/DataEncryption/DataEncryption.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Tools\Tools.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Certificates\" />
+  </ItemGroup>
+
 </Project>
